--- a/environment.yaml
+++ b/environment.yaml
@@ -3,13 +3,16 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - ca-certificates=2021.7.5=hecd8cb5_1
-  - certifi=2021.5.30=py39hecd8cb5_0
+  - blas=1.0=mkl
+  - bottleneck=1.3.2=py39he3068b8_1
+  - ca-certificates=2021.5.30=h033912b_0
+  - certifi=2021.5.30=py39h6e9494a_0
   - cffi=1.14.6=py39h2125817_0
   - chardet=4.0.0=py39hecd8cb5_1003
   - cryptography=3.4.7=py39h2fd3fbb_0
   - flake8=3.8.4=py_0
   - importlib-metadata=3.10.0=py39hecd8cb5_0
+  - intel-openmp=2021.3.0=hecd8cb5_3375
   - krb5=1.19.2=hcd88c3b_0
   - libcxx=10.0.0=1
   - libedit=3.1.20210216=h9ed2024_1
@@ -17,23 +20,36 @@ dependencies:
   - libmagic=5.36=h9ed2024_2
   - libpq=12.2=h1b4eb34_1
   - mccabe=0.6.1=py39hecd8cb5_1
+  - mkl=2021.3.0=hecd8cb5_517
+  - mkl-service=2.4.0=py39h9ed2024_0
+  - mkl_fft=1.3.0=py39h4a7008c_2
+  - mkl_random=1.2.2=py39hb2f4e1b_0
   - ncurses=6.2=h0a44026_1
-  - openssl=1.1.1k=h9ed2024_0
+  - numexpr=2.7.3=py39h5873af2_1
+  - numpy=1.20.3=py39h4b4dc7a_0
+  - numpy-base=1.20.3=py39he0bd621_0
+  - openssl=1.1.1l=h0d85af4_0
+  - pandas=1.3.1=py39h5008ddb_0
   - pdfminer.six=20201018=py_2
   - pip=21.2.2=py39hecd8cb5_0
   - psycopg2=2.8.6=py39hbcfaee0_1
   - pycodestyle=2.6.0=pyhd3eb1b0_0
   - pycparser=2.20=py_2
   - pyflakes=2.2.0=pyhd3eb1b0_0
+  - pypdf2=1.26.0=py_2
   - python=3.9.1=h88f2d9e_2
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-magic=0.4.18=py39h6e9494a_0
   - python_abi=3.9=1_cp39
+  - pytz=2021.1=pyhd3eb1b0_0
   - readline=8.1=h9ed2024_0
   - setuptools=52.0.0=py39hecd8cb5_0
+  - six=1.16.0=pyhd3eb1b0_0
   - sqlite=3.36.0=hce871da_0
   - tk=8.6.10=hb0a8c7a_0
   - tzdata=2021a=h52ac0ba_0
   - wheel=0.36.2=pyhd3eb1b0_0
+  - xlsxwriter=3.0.1=pyhd3eb1b0_0
   - xz=5.2.5=h1de35cc_0
   - zipp=3.5.0=pyhd3eb1b0_0
   - zlib=1.2.11=h1de35cc_3
